todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 3000        # port inside cluster
      targetPort: 3000  # matches containerPort
      nodePort: 31000   # any port between 30000-32767
